bendingbossbar full persistence (upon reload and leave/join) and spirit cache imported from persistence